--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="shortcut icon" type="image/png" href="images/favicon.png">
   <title>Snake Face Off</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link href="main.css" rel="stylesheet">
-  
-<style>
+  <style>
+
+/* The game screen will be hidden when the game first loads up*/
 #gameScreen {
   display: none;
 }
@@ -53,8 +55,10 @@
          <h1>Welcome</h1>
         <p> This is our CP476 Final Project. A mulitplayer snake game using javascipt and socket.io. <br></br>
            By: Amber, Bryce and Kieara.</p>
-           <a href="proposal.pdf" download> </a>
-            <button>Proposal</button>  
+           <a href="proposal.pdf" download> 
+            <button>Proposal</button> </a>
+            <a href="https://github.com/snakegamegroup"> 
+            <button>GitHub Link</button>  </a> 
            </div>
     </div>
 
@@ -68,11 +72,14 @@
         <br></br>
         <br></br>
         <br></br>
-        <br></br>
-        <br></br>
         <h1>Instructions</h1>
-        <p> Players will use arrow keys to navigate. The goal is to cause the other player to Lose. <br></br>
-          Players will lose if they hit a wall or themselves.</p>
+        <p>
+            Welcome to our Snake Game!<br>
+            This is a game with only two players. Here's how you can play the game: <br>
+            Ask a friend for the code to join a game or creat your own game.<br>
+            Use the arrow keys to navigate. Avoid hitting the wall or yourself - you'll end up losing!</br>
+            Good luck players!<br>
+          </p>
     </div>
   </div>
     
@@ -149,3 +156,4 @@
   <script src="index.js"></script>
 </body>
 </html>
+
